--- a/src/views/preguntas.hbs
+++ b/src/views/preguntas.hbs
@@ -104,31 +104,27 @@
 
                 <div class="pf card border-0 py-3 px-3" id="DondeRealizarSS" >
 
-                  <h6><b>¿Dónde puedo realizar el servicio social?</b></h6>
+                  <h6><b>¿Dónde se puede  realizar el servicio social?</b></h6>
                   <a>
-                    Lo puedes llevar acabo en una institución pública, esta puede ser en cualquier
-                    dependencia gubernamental, o en una empresa privada que esté legalmente constituida,
-                    los requisitos que te pedimos en ambos casos es que sea una empresa o dependencia
-                    Mexicana y que las actividades a realizar sean adherentes a tu licenciatura.
+                    Se puede llevar a cabo en una institución pública, puede ser en cualquier dependencia gubernamental, o en una empresa privada que esté legalmente constituida en territorio mexicano.
                   </a>
 
                 </div>
 
                 <div class="pf card border-0 py-3 px-3" id="ActividadesSS" >
 
-                  <h6><b>¿Qué actividades debo realizar en la empresa donde haré mi servicio social?</b></h6>
+                  <h6><b>¿Qué actividades se  realizan en el servicio social?</b></h6>
                   <a>
-                    Las actividades a realizar las define la persona responsable de validar tu servicio social.
+                    Las actividades a realizar las define la persona responsable de validar el servicio social.
                   </a>
 
                 </div>
 
                 <div class="pf card border-0 py-3 px-3" id="FirmasDocsSS" >
 
-                  <h6><b>¿Quién tiene qué firmar mis documentos?</b></h6>
+                  <h6><b>¿Quién firma los documentos de servicio social?</b></h6>
                   <a>
-                    Requiere firmar aquella persona de la empresa que tenga la facultad de dar fe a tu servicio
-                    social; puede ser Director, Subdirector, Gerente, Recursos Humanos, entre otros.
+                    Aquella persona de la empresa o institución que tenga la facultad de dar fe del cumplimiento del servicio social; puede ser Director, Subdirector, Gerente, Recursos Humanos, entre otros.
                   </a>
 
                 
@@ -136,11 +132,9 @@
 
                 <div class="pf card border-0 py-3 px-3" id="ListaEmpresasSS" >
 
-                  <h6><b>¿Cuentan con algún listado de empresas en donde pueda ver opciones para realizar el servicio social?</b></h6>
+                  <h6><b>¿Se cuenta  con algún listado de empresas en donde  se puedan ver las opciones para realizar el servicio social?</b></h6>
                   <a>
-                    Si, lo encuentras en tu aula virtual; recuerda que las vacantes para servicio social están
-                    sujetas a disponibilidad de las empresas.</br>
-                    Te dejo el enlace.</br>
+                    Si, se encuentra en el  aula virtual en el apartado de servicios escolares</br>
                     https://www.utel.edu.mx/servicio-social/
                   </a>
 
@@ -148,15 +142,14 @@
 
                 <div class="pf card border-0 py-3 px-3" id="conveniosProcedimientoSS" >
 
-                  <h6><b>Si elegí una empresa del listado de convenios, ¿qué tengo que hacer?</b></h6>
+                  <h6><b>¿Cómo se da inicio al servicio social , una vez que se cubren los requisitos?</b></h6>
                   <a>
-                    Ponte en contacto con la empresa y pregunta acerca de las vacantes; en caso de existir
-                    una y que seas aceptado notifica a serviciosocial@utel.edu.mx para que te otorguen la
-                    plantilla del primer formato:</br></br>
-                    Envía los siguientes datos:</br>
+                    El alumno debera llenar el formulario de SERSO o bien enviar correo electrónico a serviciosocial@utel.edu.mx</br></br>
+                    Se deberán enviar los siguientes datos:</br>
                     - Nombre completo</br>
                     - Matrícula</br>
                     - Nombre de la institución</br>
+                    -Avance curricular
                   </a>
 
                 </div>
@@ -186,134 +179,93 @@
 
                 <div class="pf card border-0 py-3 px-3" id="HorasSS" >
 
-                  <h6><b>¿Cuántas horas tengo que cubrir para liberar el servicio social?</b></h6>
+                  <h6><b>¿Cuántas horas se tiene que cubrir para liberar el servicio social?</b></h6>
                   <a>
-                    Requieres cubrir 480 horas en un periodo no menor a 6 meses ni mayor a 2 años
+                    Se requiere cubrir 480 horas en un periodo no menor a 6 meses ni mayor a 2 años
                   </a>
 
                 </div>
 
                 <div class="pf card border-0 py-3 px-3" id="HorasMenosSS" >
 
-                  <h6><b>¿Puedo hacer las horas en un tiempo menor?</b></h6>
+                  <h6><b>¿Se pueden hacer menos horas de servicio social?</b></h6>
                   <a>
-                    No, de acuerdo a Ley Reglamentaria del Artículo 5o. Constitucional, Relativo al Ejercicio de
-                    las Profesiones en el Distrito Federal y al Reglamento para la Prestación del Servicio Social,
-                    el tiempo mínimo de servicio social es de 6 meses y máximo de 2 años.
+                    No, de acuerdo a Ley Reglamentaria del Artículo 5o. Constitucional, Relativo al Ejercicio de las Profesiones en el Distrito Federal y al Reglamento para la Prestación del Servicio Social, el tiempo mínimo de servicio social es de 6 meses y máximo de 2 años.
                   </a>
 
                 </div>
 
-                <div class="pf card border-0 py-3 px-3" id="ART91SS" >
+                <div class="pf card border-0 py-3 px-3" id="excentos" >
 
-                  <h6><b>Yo trabajo en una Institución de Gobierno, ¿también tengo que hacer servicio social?</b></h6>
+                  <h6><b>¿Quienes quedan exentos del servicio social?</b></h6>
                   <a>
-                    No, de acuerdo al Artículo 91 de la Ley Reglamentaria del Artículo 5o. Constitucional,
-                    Relativo al Ejercicio de las Profesiones en el Distrito Federal los servidores públicos están
-                    exentos de realizar el servicio social siempre y cuando tengan una antigüedad mínima de 6
-                    meses en el puesto, para gestionar tu trámite envía los siguientes datos:</br>
-                    - Nombre completo</br>
-                    - Matrícula</br>
-                    - Nombre de la institución</br>
-                    - Antigüedad en el puesto</br>
-                    A la cuenta de serviciosocial@utel.edu.mx
+                    Trabajadores de gobierno :de acuerdo al Artículo 91 de la Ley Reglamentaria del Artículo 5o. Constitucional, Relativo al Ejercicio de las Profesiones en el Distrito Federal los servidores públicos están exentos de realizar el servicio social siempre y cuando tengan una antigüedad mínima de 6 meses en el puesto.
+                    </br>
+
+                    Adultos mayores de 60 años:de acuerdo al Artículo 52 de la Ley Reglamentaria del Artículo 5o. Constitucional, Relativo al Ejercicio de las Profesiones en el Distrito Federal los adultos mayores de 60 años están exentos de realizar el servicio social.
+                    </br>
+                    
+                    Personas con discapacidad o enfermedad:de acuerdo al Artículo 52 de la Ley Reglamentaria del Artículo 5o. Constitucional, Relativo al Ejercicio de las Profesiones en el Distrito Federal las personas que padecen alguna enfermedad grave están exentos de realizar el servicio social
+                    </br>
                   </a>
 
                 </div>
 
-                <div class="pf card border-0 py-3 px-3" id="ART52SS" >
-                  
-                  <h6><b>Tengo 60 años, ¿qué hago para liberar el servicio social?</b></h6>
-                  <a>
-                    De acuerdo al Artículo 52 de la Ley Reglamentaria del Artículo 5o. Constitucional, Relativo
-                    al Ejercicio de las Profesiones en el Distrito Federal los adultos mayores de 60 años están
-                    exentos de realizar el servicio social, para gestionar tu trámite envía los siguientes datos:</br>
-                    - Nombre completo</br>
-                    - Matrícula</br>
-                    - Especifica que tienes más de 60 años</br>
-                    A la cuenta de serviciosocial@utel.edu.mx
-                  </a>
-
-                </div>
-
-                <div class="pf card border-0 py-3 px-3" id="ART52SSDiscapacidad" >
-                  
-                  <h6><b>Soy una persona incapacitada para realizar el servicio social, ¿Qué necesito para liberarlo?</b></h6>
-                  <a>
-                    De acuerdo al Artículo 52 de la Ley Reglamentaria del Artículo 5o. Constitucional, Relativo
-                    al Ejercicio de las Profesiones en el Distrito Federal las personas que padecen alguna
-                    enfermedad grave están exentos de realizar el servicio social, para gestionar tu trámite
-                    envía los siguientes datos:</br>
-                    - Nombre completo</br>
-                    - Matrícula</br>
-                    - Menciona tu condición actual y envía algún documento que lo respalde</br>
-                    A la cuenta de serviciosocial@utel.edu.mx
-                  </a>
-
-                </div>
 
                 <div class="pf card border-0 py-3 px-3" id="VerificarConvenio" >
                   
-                  <h6><b>¿Me gustaría saber si la empresa donde quiero hacer mi servicio social tiene convenio con ustedes?</b></h6>
+                  <h6><b>¿Una empresa puede hacer convenios con Utel, para reclutar alumnos para servicio social?</b></h6>
                   <a>
-                    Actualmente ya no se firma el convenio a menos que la empresa así lo solicite; en caso de
-                    requerirlo te pido te pongas en contacto a serviciosocial@utel.edu.mx para que te apoyen
-                    con más detalles.
+                    Si ,para ello el alumno deberá escribir al correo electrónico de serviciosocial@utel.edu.mx y proporcionar los datos de la empresa
                   </a>
 
                 </div>
 
                 <div class="pf card border-0 py-3 px-3" id="SSsinNotificar" >
                   
-                  <h6><b>Inicié mi servicio social desde hace tiempo pero no le avisé a nadie, ¿qué puedo hacer?</b></h6>
+                  <h6><b>¿Qué pasa cuando un alumno no reporta el inicio del servicio social?</b></h6>
                   <a>
-                    En este caso es muy probable que no se te considere el tiempo, pues de acuerdo a la
-                    logística primero requieres registrar tu servicio social; sin embargo puedes ponerte en
-                    contacto al área de Servicio social; allí podrán orientarte mejor:
-                    serviciosocial@utel.edu.mx
+                    En este caso es muy probable que no se tome en cuenta  el tiempo. Parte de los requisitos, es que el alumno solicite los documentos de servicio social para registrar el inicio del mismo.
+                    <br/>
+                    Para casos delicados se debe canalizar directamente con el coordinador del área o bien que el alumno se comunique directamente con el área de servicio social  
+
                   </a>
 
                 </div>
 
                 <div class="pf card border-0 py-3 px-3" id="SSExpLaboral" >
                   
-                  <h6><b>Tengo ya tiempo trabajando para una empresa privada, ¿puedo liberar mi servicio social por experiencia profesional?</b></h6>
+                  <h6><b>¿Se puede liberar el servicio social por experiencia laboral?</b></h6>
                   <a>
-                    Tengo ya tiempo trabajando para una empresa privada, ¿puedo liberar mi servicio social
-                    por experiencia profesional?
+                    Si, siempre y cuando se lleve un mínimo de 6 meses en la empresa.
                   </a>
 
                 </div>
 
                 <div class="pf card border-0 py-3 px-3" id="EquivalenciaSS" >
                   
-                  <h6><b>Si yo entré por equivalencia, ¿ya no tengo que hacer servicio social?</b></h6>
+                  <h6><b>¿Si un alumno ingresó por equivalencia y liberó el servicio social, ya no se realiza?</b></h6>
                   <a>
-                    El servicio social no se hace equivalente, ya que lo realizaste para otra institución y en otro
-                     momento, además que los oficios requieren estar dirigidos a la Utel.
+                    El servicio social no se hace equivalente, se debe realizar nuevamente.
                   </a>
 
                 </div>
 
                 <div class="pf card border-0 py-3 px-3" id="RevalidaSS" >
                   
-                  <h6><b>Estoy estudiando una segunda licenciatura, yo ya hice el servicio social cuando estudiaba esa licenciatura, ¿Es necesario volver a hacerlo?</b></h6>
+                  <h6><b>¿Si un alumno ya concluyó una licenciatura , y está en curso una segunda debe realizar servicio social?</b></h6>
                   <a>
-                    Si, el servicio social es un requisito obligatorio para obtener un título universitario y dado
-                    que la Norma Constitutiva lo indica, requiere hacerse al cumplir por lo menos el 70% de
-                    avance curricular de la licenciatura actual y para nuestra institución; por lo que el servicio
-                    social que tú ya realizaste no se te puede tomar en cuenta pues lo hiciste en otro
-                    momento y para otra institución.
+                    Si, el servicio social es un requisito obligatorio para obtener un título , por lo tanto no se  puede tomar en cuenta debido a que se realizó para un programa diferente.
                   </a>
 
                 </div>
 
                 <div class="pf card border-0 py-3 px-3" id="PausaSS" >
                   
-                  <h6><b>¿Puedo poner en pausa mi servicio social?</b></h6>
+                  <h6><b>¿Se puede pausar el servicio social?</b></h6>
                   <a>
-                    Sí, siempre y cuando la empresa en donde realizas el servicio social esté de acuerdo; de lo
-                    contrario tendrías que empezar nuevamente el proceso.
+                    Sí, siempre y cuando la empresa en donde se realiza el servicio social esté de acuerdo; de lo contrario se tendrá que empezar nuevamente el proceso. 
+                    No debe exceder de  2 años 
                   </a>
 
                 </div>
@@ -322,11 +274,8 @@
                   
                   <h6><b>¿Puedo hacer el servicio social en Utel?</b></h6>
                   <a>
-                    Si, actualmente tenemos disponible únicamente el programa coach universitario, el cual
-                    consiste en brindar acompañamiento y apoyo a los estudiantes de nuevo ingreso.</br>
-                    Si te interesa recibir mayor información del programa, te pido te pongas en contacto a la
-                    siguiente dirección:</br>
-                    desarrollo.profesional@utel.edu.mx
+                    ¿Se puede hacer el servicio social en Utel?
+                    Si, actualmente tenemos disponible el programa coach universitario, el cual consiste en brindar acompañamiento y apoyo a los alumnos inscritos  
                   </a>
 
                 </div>
@@ -451,29 +400,6 @@
                       </a>
                   </div>
 
-                  <div class="pf card border-0 py-3 px-3" id="">
-                    
-                    <video width="640" height="360" controls>
-                      <source src="videos/Trámites en línea.mp4" type="video/mp4">
-                      <p>Txd</p>
-                    </video>
-
-                    <video width="640" height="360" controls>
-                      <source src="videos/Equivalencia.mp4" type="video/mp4">
-                      <p>Txd</p>
-                    </video>
-
-                    <video width="640" height="360" controls>
-                      <source src="videos/Revalidación.mp4" type="video/mp4">
-                      <p>Txd</p>
-                    </video>
-
-                    <video width="640" height="360" controls>
-                      <source src="videos/Trámites en línea.mp4" type="video/mp4">
-                      <p></p>
-                    </video>
-                  </div>
-
                   
 
               </div>
@@ -485,7 +411,7 @@
                   
                   <h6><b>¿Cómo realizo un cambio de Licenciatura?</b></h6>
                   <br/>
-                  <a>
+                   <a>
                     En este procedimiento el alumno solicita cambiar a una carrera diferente de la que inició, para realizar el trámite se necesita el formato de cambio de carrera firmado y el pago por la gestión del trámite con costo de $1500.<br/><br/>
 
                     Si ya cuentas con avance curricular y la nueva carrera tiene materias que ya cursaste se hará una equivalencia interna y no tendrás que cursarlas nuevamente.<br/><br/>
