--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -33,7 +33,9 @@
             <img src="img/Noticias/noticiasstrabajo.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Modalidades servicio social</h5>
-              <p class="card-text" style="text-align: justify;">Se crean  nuevas modalidades de servicio social,  con el fin de que los alumnos tengan  mayor facilidad para realizar la liberación del servicio social. La información a detalle se puede consultar  en el apartado de servicio social.</p>
+              <p class="card-text" style="text-align: justify;">Se crean  nuevas modalidades de servicio social,  con el fin de que los alumnos tengan  mayor facilidad para realizar la liberación del servicio social.
+                <br/>
+                 La información a detalle se puede consultar  en el apartado de servicio social.</p>
             </div>
           </div>
         </div>
