--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -37,7 +37,7 @@
                         <h5 class="card-title text-center">Certificado apostillado</h5>
                         <p class="card-text">     
                           
-                        Trámite de certificación de firmas facultadas para la validez y legitimidad de documentos públicos emitidos en territorio mexicano</br></br>
+                        Trámite de certificación de firmas facultadas para la validez y legitimidad de documentos públicos emitidos en territorio mexicano.</br></br>
 
                         El tiempo estimado para la elaboración del documento es de 60 a 90 dias hábiles.</br>
                         Se deberán cubrir los siguientes requisitos:</br>
@@ -54,7 +54,7 @@
 
                       <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom4" aria-labelledby="offcanvasBottomLabel">
                       <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasBottomLabel4">Certificación</h5>
+                        <h5 class="offcanvas-title" id="offcanvasBottomLabel4">Certificado apostillado</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                       </div>
                       <div class="container card border border-0">
@@ -86,20 +86,28 @@
                             </div>
                             
                           </div>
+
+                          <div class="col card border border-0">
+  
+                            <strong class="py-3 px-3" style="text-align: center;">Características del apostille de documentos</strong>
+                            <a style="text-align: justify;">
+                              <strong class="py-3 px-3" style="text-align: justify;"></strong></br>
+                            
+                              1- Que la firma de la persona que aparece en el documento es auténtica.
+                            </br></br>
+                              2.- Que la persona que firma el documento tiene facultades para ello de con las atribuciones que mediante Ley le son otorgadas al momento de
+                              firmar dicho documento.
+                            </br></br>
+                              3.- Que el sello o timbre que en su caso consta en el documento, es auténtico.
+                            </br></br>
+                              De este modo, todos los casos en los que una apostilla sea identificable y permanezca adherida al Documento en cuestión, éste es válido y surte efectos en el
+                              extranjero cuando así se requiera.
+                              </a>
+                          </div>
                           
                           <div class="col card border border-0">
         
-                            <strong class="py-3 px-3">Características del apostille de documentos</strong></br>
                             
-                            1- Que la firma de la persona que aparece en el documento es auténtica.
-                          </br></br>
-                            2.- Que la persona que firma el documento tiene facultades para ello de con las atribuciones que mediante Ley le son otorgadas al momento de
-                            firmar dicho documento.
-                          </br></br>
-                            3.- Que el sello o timbre que en su caso consta en el documento, es auténtico.
-                          </br></br>
-                            De este modo, todos los casos en los que una apostilla sea identificable y permanezca adherida al Documento en cuestión, éste es válido y surte efectos en el
-                            extranjero cuando así se requiera.
                           
                           </div>
                         </div>   
@@ -123,7 +131,7 @@
                       <h5 class="card-title text-center">Título apostillado</h5>
                       <p class="card-text">     
                         
-                        Trámite de certificación de firmas facultadas para la validez y legitimidad de documentos públicos emitidos en territorio mexicano</br></br>
+                        Trámite de certificación de firmas facultadas para la validez y legitimidad de documentos públicos emitidos en territorio mexicano.</br></br>
 
                         El tiempo estimado para la elaboración del documento es de 60 a 90 dias hábiles.</br>
                         Se deberán cubrir los siguientes requisitos:</br>
@@ -140,7 +148,7 @@
 
                     <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom-tit-apost" aria-labelledby="offcanvasBottomLabel">
                     <div class="offcanvas-header">
-                      <h5 class="offcanvas-title" id="offcanvasBottomLabel4">Certificación</h5>
+                      <h5 class="offcanvas-title" id="offcanvasBottomLabel4">Título apostillado</h5>
                       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="container card border border-0">
@@ -177,19 +185,21 @@
                         </div>
                         
                         <div class="col card border border-0">
-        
-                          <strong class="py-3 px-3"> Características del apostille de documentos</strong></br>
+  
+                          <strong class="py-3 px-3" style="text-align: center;">Características del apostille de documentos</strong>
+                          <a style="text-align: justify;">
+                            <strong class="py-3 px-3" style="text-align: justify;"></strong></br>
                           
-                          1- Que la firma de la persona que aparece en el documento es auténtica.
-                        </br></br>
-                          2.- Que la persona que firma el documento tiene facultades para ello de acuerdo con las atribuciones que mediante Ley le son otorgadas al momento de
-                          firmar dicho documento.
-                        </br></br>
-                          3.- Que el sello o timbre que en su caso consta en el documento, es auténtico.
-                        </br></br>
-                          De este modo, todos los casos en los que una apostilla sea identificable y permanezca adherida al Documento en cuestión, éste es válido y surte efectos en el
-                          extranjero cuando así se requiera.
-                        
+                            1- Que la firma de la persona que aparece en el documento es auténtica.
+                          </br></br>
+                            2.- Que la persona que firma el documento tiene facultades para ello de con las atribuciones que mediante Ley le son otorgadas al momento de
+                            firmar dicho documento.
+                          </br></br>
+                            3.- Que el sello o timbre que en su caso consta en el documento, es auténtico.
+                          </br></br>
+                            De este modo, todos los casos en los que una apostilla sea identificable y permanezca adherida al Documento en cuestión, éste es válido y surte efectos en el
+                            extranjero cuando así se requiera.
+                            </a>
                         </div>
                       </div>   
                     </div>
@@ -337,7 +347,7 @@
 
           <div class="col card border-0 h-100" >
             <div class="card-body">
-              <h5 class="card-title">PERU</h5>
+              <h5 class="card-title">Perú</h5>
               <p class="card-text">
                 <b>Entidad</b>: Superintendencia Nacional de Educación Superior Universitaria (SUNEDU)</br>
                 <b>Apostilla título</b>: SI</br> 
@@ -350,7 +360,7 @@
 
           <div class="col card border-0 h-100" >
             <div class="card-body">
-              <h5 class="card-title">COLOMBIA</h5>
+              <h5 class="card-title">Colombia</h5>
               <p class="card-text">
                 <b>Entidad</b>: Ministerio de Educación Nacional</br>
                 <b>Apostilla título</b>: SI</br> 
@@ -363,7 +373,7 @@
 
           <div class="col card border-0 h-100" >
             <div class="card-body">
-              <h5 class="card-title">CHILE </h5>
+              <h5 class="card-title">Chile</h5>
               <p class="card-text">
                 <b>Entidad</b>: Universidad de Chile</br>
                 <b>Apostilla título</b>: SI</br> 
@@ -376,7 +386,7 @@
 
           <div class="col card border-0 h-100" >
             <div class="card-body">
-              <h5 class="card-title">ECUADOR </h5>
+              <h5 class="card-title">Ecuador </h5>
               <p class="card-text">
                 <b>Entidad</b>: Secretaría de Educación Superior, Ciencia, Tecnología e Innovación (SENESCYT)</br>
                 <b>Apostilla título</b>: SI</br> 
@@ -389,7 +399,7 @@
 
           <div class="col card border-0 h-100" >
             <div class="card-body">
-              <h5 class="card-title">DOMINICANA </h5>
+              <h5 class="card-title">Dominicana</h5>
               <p class="card-text">
                 <b>Entidad</b>: Ministerio de Educación Ciencia y Tecnología (Mescyt) Universidad Autónoma de Santo Domingo (UASD)</br>
                 <b>Apostilla título</b>: SI</br> 
@@ -402,7 +412,7 @@
 
           <div class="col card border-0 h-100" >
             <div class="card-body">
-              <h5 class="card-title">BOLIVIA </h5>
+              <h5 class="card-title">Bolivia</h5>
               <p class="card-text">
                 <b>Entidad</b>: Universidades Autónomas Bolivianas y CEUB (para programas que no existan en Bolivia)</br>
                 <b>Apostilla título</b>: SI</br> 
@@ -415,7 +425,7 @@
 
           <div class="col card border-0 h-100" >
             <div class="card-body">
-              <h5 class="card-title">ARGENTINA </h5>
+              <h5 class="card-title">Argentina</h5>
               <p class="card-text">
                 <b>Entidad</b>: cada universidad nacional cuenta con un apartado en su web, o en su defecto en sus oficinas presenciales.</br>
                 <b>Apostilla título</b>: SI</br> 
@@ -428,7 +438,7 @@
 
           <div class="col card border-0 h-100" >
             <div class="card-body">
-              <h5 class="card-title">EL SALVADOR </h5>
+              <h5 class="card-title">El Salvador</h5>
               <p class="card-text">
                 <b>Entidad</b>: Ministerio de Educación</br>
                 <b>Apostilla título</b>: SI</br> 
@@ -441,7 +451,7 @@
 
           <div class="col card border-0 h-100" >
             <div class="card-body">
-              <h5 class="card-title">GUATEMALA  </h5>
+              <h5 class="card-title">Guatemala</h5>
               <p class="card-text">
                 <b>Entidad</b>: Universidad San Carlos de Guatemala</br>
                 <b>Apostilla título</b>: SI</br> 
@@ -454,7 +464,7 @@
 
           <div class="col card border-0 h-100" >
             <div class="card-body">
-              <h5 class="card-title">PARAGUAY </h5>
+              <h5 class="card-title">Paraguay </h5>
               <p class="card-text">
                 <b>Entidad</b>: Ministerio de Educación y Ciencia (MEC)</br>
                 <b>Apostilla título</b>: SI</br> 
@@ -467,7 +477,7 @@
 
           <div class="col card border-0 h-100" >
             <div class="card-body">
-              <h5 class="card-title">PANAMA</h5>
+              <h5 class="card-title">Panamá</h5>
               <p class="card-text">
                 <b>Entidad</b>: Universidad de Panamá</br>
                 <b>Apostilla título</b>: SI</br> 
@@ -480,7 +490,7 @@
 
           <div class="col card border-0 h-100" >
             <div class="card-body">
-              <h5 class="card-title">URUGAY</h5>
+              <h5 class="card-title">Uruguay</h5>
               <p class="card-text">
                 <b>Entidad</b>: Ministerio de Educación y Cultura - Dirección Nacional de Educación</br>
                 <b>Apostilla título</b>: SI</br> 
@@ -493,7 +503,7 @@
 
           <div class="col card border-0 h-100" >
             <div class="card-body">
-              <h5 class="card-title">HONDURAS</h5>
+              <h5 class="card-title">Honduras</h5>
               <p class="card-text">
                 <b>Entidad</b>: Universidad Nacional Autónoma de Honduras</br>
                 <b>Apostilla título</b>: SI</br> 
@@ -506,7 +516,7 @@
 
           <div class="col card border-0 h-100" >
             <div class="card-body">
-              <h5 class="card-title">NICARAGUA </h5>
+              <h5 class="card-title">Nicaragua</h5>
               <p class="card-text">
                 <b>Entidad</b>: Universidades Estatales, reconocimiento.  Universidad Nacional Autonoma de Nicaragua, incorporación y al ser estatal, reconocimiento</br>
                 <b>Apostilla título</b>: SI</br> 
@@ -519,7 +529,7 @@
 
           <div class="col card border-0 h-100" >
             <div class="card-body">
-              <h5 class="card-title">COSTA RICA </h5>
+              <h5 class="card-title">Costa Rica</h5>
               <p class="card-text">
                 <b>Entidad</b>: "-CONARE (Consejo Nacional de Rectores) -Universidades miembros del Consejo Nacional de Rectores "</br>
                 <b>Apostilla título</b>: SI</br> 
@@ -532,7 +542,7 @@
 
           <div class="col card border-0 h-100" >
             <div class="card-body">
-              <h5 class="card-title">ESPAÑA</h5>
+              <h5 class="card-title">España</h5>
               <p class="card-text">
                 <b>Entidad</b>: Ministerio de Universidades</br>
                 <b>Apostilla título</b>: SI</br> 
@@ -576,7 +586,7 @@
       <!--Equivalencia Académica USA-->
       <div class="bloque" id="bloqueEqusa">
         <div class="card border-0 py-3 px-3" >
-            <h4><b>Equivalencia academica USA</b></h4></br>
+            <h4><b>Equivalencia académica USA</b></h4></br>
             
             <a style="text-align: justify;">
                 Realizar este trámite permite a nuestros egresados reconocer y validar sus estudios de Utel en territorio 
