--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -9,7 +9,7 @@
       <div class="row">
         <div class="col-md-8">
 
-          <p class="card-text">
+          <p class="card-text" style="text-align: justify;">
             Ley de Profesiones</br></br>
 
             ARTÌCULO 53.- Se entiende por servicio social el trabajo de carácter temporal y mediante retribución que
@@ -476,9 +476,9 @@
           <strong>Servicio social en Utel como coach universitario </strong> </br></br>
 
           El servicio social en Utel es uno de los programas
-          acreditación de dicho servicio. Este programa
-          consiste en:
-          Incentivar y apoyar al  en su introducción al
+          acreditación de dicho servicio. <br/><br/>
+          Este programa consiste en:<br/>
+          Incentivar y apoyar al alumno en su introducción al
           quehacer profesional en alguna área de la
           Universidad.
 
@@ -2977,9 +2977,11 @@
 
           El servicio social programa de tutorías es uno de los programas
           que se han puesto en marcha para el proceso de acreditación
-          de dicho servicio. Este programa consiste en:
-          <br /><br />
-          El  de la universidad se inscribe a un programa de
+          de dicho servicio.<br/><br/>
+
+          Este programa consiste en:
+          <br/>
+          El alumno de la universidad se inscribe a un programa de
           tutorías en alguna institución pública, asociación civil u ONG.
 
         </div>
