--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -636,7 +636,7 @@
 
                       <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom4" aria-labelledby="offcanvasBottomLabel">
                       <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasBottomLabel4">Certificación</h5>
+                        <h5 class="offcanvas-title" id="offcanvasBottomLabel4"></h5>
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                       </div>
                       <div class="container card border border-0">
@@ -651,7 +651,7 @@
                           
                           <div class="col card border border-0">
         
-                            <strong class="py-3 px-3"> Caracteristicas de la certificacion parcial</strong></br>
+                            <strong class="py-3 px-3" style="text-align: center;"> Caracteristicas de la certificacion parcial</strong></br>
                             Documento que se otorga al alumno que haya acreditado asignaturas de algún plan de estudios y que requiere ser 
                             autenticado por la Secretaría de Educación Pública. </br></br>
 
