--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -85,9 +85,10 @@
 
                             Esta forma aplica para alumnos con estudios en el extranjero que desean ejercer profesionalmente en México.</br></br>
                             
-                            En este supuesto el alumno debe llevar a cabo el proceso de revalidación correspondiente y cumplir con las 
+                            En este tramite el alumno debe llevar a cabo el proceso de revalidación correspondiente y cumplir con las 
                             normas establecidas. (Los alumnos que ingresen por esta opción, su egreso será el mismo que un alumno regular, 
-                            cumpliendo con su servicio social para poder realizar su registro para emisión de cédula profesional)                                 
+                            cumpliendo con su servicio social para poder realizar su registro para emisión de cédula profesional, 
+                            de igual forma es necesario realizar el tramite de obtención de CURP)                                 
 
                           </p>
 
@@ -164,7 +165,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Constancia de término</h5>
                   <p class="card-text"><small class="text-muted">Alumno/Egresado</small></p>
-                  <p class="card-text">
+                  <p class="card-text" style="text-align: justify;">
 
                   Documento que hace constar que has concluido el 100% de tus créditos del programa cursado, 
                   no contiene foto. <br/><br/>
@@ -182,7 +183,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Constancia de estudios</h5>
                   <p class="card-text"><small class="text-muted">Alumno</small></p>
-                  <p class="card-text">
+                  <p class="card-text" style="text-align: justify;">
                   Documento que hace constar el estatus de tus estudios al momento de su expedición. Para obtenerla debes tener tu expediente digital completo. 
                   *Debido a la pandemia ocasionada por el COVID-19, la entrega de este documento es solo en formato digital. *Nota: La información que se encuentra actualmente 
                   en tu SIU es la misma que se plasmará en tu documento solicitado. Revisa que esté correcta ya que no habrá cambios. Toma en cuenta que calificaciones se actualizan 
@@ -202,7 +203,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Carta pasante</h5>
                   <p class="card-text"><small class="text-muted">Egresado</small></p>
-                  <p class="card-text">
+                  <p class="card-text" style="text-align: justify;">
                   Documento que acredita el término de la Licenciatura y que te permite desempeñarte en el 
                   ámbito laboral de tu profesión mientras te encuentras en el proceso de titulación. 
                   Para obtenerla debes tener tu expediente digital completo y fotografías tamaño óvalo-credencial. <br/><br/>
@@ -221,7 +222,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Historial académico</h5>
                   <p class="card-text"><small class="text-muted">Alumno/Egresado</small></p>
-                  <p class="card-text">
+                  <p class="card-text" style="text-align: justify;">
                   Documento que contiene las materias, el período en que se cursaron y la calificación obtenida. Para obtenerlo debes tener cursado mínimo un cuatrimestre del programa inscrito 
                   y tu expediente digital completo. *Debido a la pandemia ocasionada por el COVID-19, la entrega de este documento es solo en formato digital. *Nota: La información que se encuentra 
                   actualmente en tu SIU es la misma que se plasmará en tu documento solicitado. Revisa que esté correcta ya que no habrá cambios.
@@ -241,7 +242,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Credencial</h5>
                   <p class="card-text"><small class="text-muted">Alumno</small></p>
-                  <p class="card-text">
+                  <p class="card-text" style="text-align: justify;">
                   Documento que permite identificarte como orgulloso alumno de la institución.
                   Para obtenerla debes tener tu expediente digital completo.
                   <br/><br/>
@@ -259,7 +260,7 @@
                 <div class="card-body">
                   <h5 class="card-title">CONSTANCIA DE INSCRIPCIÓN</h5>
                   <p class="card-text"><small class="text-muted">Alumno</small></p>
-                  <p class="card-text">
+                  <p class="card-text" style="text-align: justify;">
                   Documento para alumnos de futuros y de nuevo ingreso, que avala su inscripción en un programa Utel.<br/><br/>
                   
                   Costo: 500.00 MXN<br/><br/>
@@ -276,7 +277,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Diploma Máster</h5>
                   <p class="card-text"><small class="text-muted">Egresado</small></p>
-                  <p class="card-text">
+                  <p class="card-text" style="text-align: justify;">
                   Documento que contiene las materias, el período en que se cursaron y la calificación obtenida<br/><br/>
                   
                   Costo: 500.00 MXN<br/><br/>
@@ -470,7 +471,7 @@
                   <h5 class="card-title">Se deberán cubrir los siguientes requisitos:</h5>
                   <p class="card-text">
                     -Tener estatus de matriculado </br>
-                    -No tener adeudos.</br>
+                    -No tener saldos pendientes</br>
                     -Haber cursado como mínimo, un año en calendario como alumno Utel.</br>
                     -Haber aprobado las primeras 12 asignaturas del plan de estudio para el primer diploma Intermedio
                     y las 12 subsecuentes para el segundo. </br>
@@ -535,8 +536,8 @@
                     
                     <div class="col card border border-0">
   
-                      <strong class="py-3 px-3"> Características del diploma intermedio</strong>
-                      <a>
+                      <strong class="py-3 px-3" style="text-align: center;"> Características del diploma intermedio</strong>
+                      <a style="text-align: justify;">
 
                         Documento con valor curricular otorgado por la Universidad, que avala las habilidades adquiridas durante el primer y segundo 
                         año de licenciatura, según corresponda. Para obtenerlo debes tener tu expediente digital. </br></br>
@@ -603,8 +604,8 @@
                     
                     <div class="col card border border-0">
   
-                      <strong class="py-3 px-3"> Características del Diploma intermedio</strong>
-                      <a>
+                      <strong class="py-3 px-3" style="text-align: center;"> Características del Diploma intermedio</strong>
+                      <a style="text-align: justify;">
 
                         Documento con valor curricular otorgado por la Universidad, que avala las habilidades adquiridas durante el primer y segundo 
                         año de licenciatura, según corresponda. Para obtenerlo debes tener tu expediente digital. </br></br>
