--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -213,7 +213,7 @@
                       institución para que los alumnos puedan realizar su servicio social dentro de la
                       misma.<br /><br />
 
-                      -Datos completos del  <br /><br />
+                      -Datos completos del  <br/><br/>
 
                       -Departamento y encargado del área de interés. <br /><br />
 
@@ -272,7 +272,7 @@
 
                   </div>
 
-                  <div class="col card border border-0">
+                  <div class="col card border border-0" style="text-align: justify;">
 
                     <strong class="py-3 px-3"> Características de la carta de aceptación</strong>
 
